checkers/tests/igj/ForEnhanced.out
ForEnhanced.java:21: error: (enhancedfor.type.incompatible)
ForEnhanced.java:23: error: (enhancedfor.type.incompatible)
ForEnhanced.java:30: error: (enhancedfor.type.incompatible)
ForEnhanced.java:32: error: (enhancedfor.type.incompatible)
ForEnhanced.java:38: error: (enhancedfor.type.incompatible)
ForEnhanced.java:41: error: (enhancedfor.type.incompatible)
ForEnhanced.java:57: error: (enhancedfor.type.incompatible)
ForEnhanced.java:60: error: (enhancedfor.type.incompatible)
ForEnhanced.java:74: error: (enhancedfor.type.incompatible)
ForEnhanced.java:77: error: (enhancedfor.type.incompatible)
ForEnhanced.java:83: error: (enhancedfor.type.incompatible)
ForEnhanced.java:89: error: (enhancedfor.type.incompatible)
ForEnhanced.java:90: error: (enhancedfor.type.incompatible)
ForEnhanced.java:91: error: (enhancedfor.type.incompatible)
